@@ -152,6 +152,9 @@ AxisDock::AxisDock(QWidget* parent) : BaseDock(parent) {
 	connect(ui.leScalingFactor, &KLineEdit::textChanged, this, &AxisDock::scalingFactorChanged);
 	connect(ui.tbUnityScale, &QToolButton::clicked, this, &AxisDock::setUnityScale);
 	connect(ui.tbUnityRange, &QToolButton::clicked, this, &AxisDock::setUnityRange);
+
+	connect(ui.chkShowScaleOffset, &QCheckBox::stateChanged, this, &AxisDock::showScaleOffsetChanged);
+
 	connect(ui.cbPlotRanges, QOverload<int>::of(&QComboBox::currentIndexChanged), this, &AxisDock::plotRangeChanged);
 
 	//"Line"-tab
@@ -516,6 +519,7 @@ void AxisDock::setAxes(QList<Axis*> list) {
 	connect(m_axis, &Axis::endChanged, this, &AxisDock::axisEndChanged);
 	connect(m_axis, &Axis::zeroOffsetChanged, this, &AxisDock::axisZeroOffsetChanged);
 	connect(m_axis, &Axis::scalingFactorChanged, this, &AxisDock::axisScalingFactorChanged);
+	connect(m_axis, &Axis::showScaleOffsetChanged, this, &AxisDock::axisShowScaleOffsetChanged);
 	connect(m_axis, &WorksheetElement::plotRangeListChanged, this, &AxisDock::updatePlotRanges);
 
 	// line
@@ -928,6 +932,16 @@ void AxisDock::setUnityRange() {
 	SET_NUMBER_LOCALE
 	ui.leScalingFactor->setText(numberLocale.toString(1./m_axis->range().size()));
 	ui.leZeroOffset->setText(numberLocale.toString(-m_axis->range().start()/m_axis->range().size()));
+}
+
+void AxisDock::showScaleOffsetChanged() {
+	DEBUG(Q_FUNC_INFO)
+	if (m_initializing)
+		return;
+
+	const Lock lock(m_initializing);
+	for (auto* axis : m_axesList)
+		axis->setShowScaleOffset(ui.chkShowScaleOffset->isChecked());
 }
 
 // "Line"-tab
@@ -1968,12 +1982,16 @@ void AxisDock::axisZeroOffsetChanged(qreal value) {
 	SET_NUMBER_LOCALE
 	ui.leZeroOffset->setText(numberLocale.toString(value));
 }
-
 void AxisDock::axisScalingFactorChanged(qreal value) {
 	if (m_initializing) return;
 	const Lock lock(m_initializing);
 	SET_NUMBER_LOCALE
 	ui.leScalingFactor->setText(numberLocale.toString(value));
+}
+void AxisDock::axisShowScaleOffsetChanged(bool b) {
+	if (m_initializing) return;
+	const Lock lock(m_initializing);
+	ui.chkShowScaleOffset->setChecked(b);
 }
 
 //line
@@ -2333,6 +2351,7 @@ void AxisDock::load() {
 
 	ui.leZeroOffset->setText( numberLocale.toString(m_axis->zeroOffset()) );
 	ui.leScalingFactor->setText( numberLocale.toString(m_axis->scalingFactor()) );
+	ui.chkShowScaleOffset->setChecked( m_axis->showScaleOffset() );
 
 	//Line
 	ui.cbLineStyle->setCurrentIndex( (int) m_axis->linePen().style() );
@@ -2450,12 +2469,13 @@ void AxisDock::loadConfig(KConfig& config) {
 	SET_NUMBER_LOCALE
 	ui.sbPositionLogical->setValue(group.readEntry("LogicalPosition", m_axis->logicalPosition()));
 	ui.sbPosition->setValue(Worksheet::convertFromSceneUnits(group.readEntry("PositionOffset", m_axis->offset()), m_worksheetUnit));
-	ui.cbScale->setCurrentIndex( group.readEntry("Scale", (int) m_axis->scale()) );
+	ui.cbScale->setCurrentIndex( group.readEntry("Scale", static_cast<int>(m_axis->scale())) );
 	ui.chkAutoScale->setChecked( group.readEntry("AutoScale", m_axis->autoScale()) );
 	ui.leStart->setText( numberLocale.toString(group.readEntry("Start", m_axis->range().start())) );
 	ui.leEnd->setText( numberLocale.toString(group.readEntry("End", m_axis->range().end())) );
 	ui.leZeroOffset->setText( numberLocale.toString(group.readEntry("ZeroOffset", m_axis->zeroOffset())) );
 	ui.leScalingFactor->setText( numberLocale.toString(group.readEntry("ScalingFactor", m_axis->scalingFactor())) );
+	ui.chkShowScaleOffset->setChecked( group.readEntry("ShowScaleOffset", static_cast<int>(m_axis->showScaleOffset())) );
 
 	//Title
 	KConfigGroup axisLabelGroup = config.group("AxisLabel");
@@ -2581,6 +2601,7 @@ void AxisDock::saveConfigAsTemplate(KConfig& config) {
 	group.writeEntry("End", numberLocale.toDouble(ui.leEnd->text()));
 	group.writeEntry("ZeroOffset", numberLocale.toDouble(ui.leZeroOffset->text()));
 	group.writeEntry("ScalingFactor", numberLocale.toDouble(ui.leScalingFactor->text()));
+	group.writeEntry("ShowScaleOffset", ui.chkShowScaleOffset->isChecked());
 
 	//Title
 	KConfigGroup axisLabelGroup = config.group("AxisLabel");
